--- a/samples/IdentitySample.Mvc/Views/Manage/ManageLogins.cshtml
+++ b/samples/IdentitySample.Mvc/Views/Manage/ManageLogins.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IdentitySample.Models.ManageLoginsViewModel
-@using Microsoft.AspNet.Http.Security
+@using Microsoft.AspNet.Http.Authentication
 @{
     //TODO: Until we have a way to specify the layout page at application level.
     Layout = "/Views/Shared/_Layout.cshtml";
